# machine_learning

./: .gitignore  README.md  conda_environment.yml  hw1.md  perceptron.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/hw2/: hw2.md
src/: perceptron.py  xor_perceptron.py
src/final/: final.py  test_model.py
src/final/final-1/: final.py  test_model.py
src/hw1_make_perceptron/: perceptron.py
src/hw2_MNIST/: hw2_mnist_learning.py
src/playground/: tutorial.ipynb
