[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["jinoo <jinu1423@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
isort = "^5.13.2"
matplotlib = "^3.9.2"
torch = "^2.5.0"
pillow = "^10.4.0"
torchvision = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
