[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["jinoo <jinu1423@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
isort = "^5.13.2"
matplotlib = "^3.9.2"
torch = "^2.5.0"
pillow = "^10.4.0"
torchvision = "^0.20.0"
torch-summary = "^1.4.5"
ipynb = "^0.5.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
wget = "^3.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
